...
                        }
                    }
                }
            }

        }
        .accessibilityIdentifier("TransactionList")
    }

    @ViewBuilder
    private var transactionList: some View {
        if TestingConfiguration.isRunningTests {
            listContent.listStyle(.plain)
...
